# Battery-Management-System-Capstone-2026

./: .gitignore
Hardware/: BMU BOM.xlsx  CMU BOM.xlsx
Hardware/BMU/: BMU-CAN.kicad_sch  BMU-COM Bridge.kicad_sch  BMU-MCU.kicad_sch  BMU-POWER.kicad_sch  BMU.kicad_pcb  BMU.kicad_pro  BMU.kicad_sch
Hardware/BMU libraries/691382000003/: 691382000003.kicad_mod
Hardware/BMU libraries/MCP2562FDT-H_SN/: MCP2562FDT-H_SN.kicad_sym  SOIC127P600X175-8N.kicad_mod
Hardware/BMU libraries/OKI_78SR_5_1_5_W36_C/: CONV_OKI-78SR-5_1.5-W36-C.kicad_mod
Hardware/Battery Management Unit (BMU)/: BMU-CAN.kicad_sch  BMU-COM Bridge.kicad_sch  BMU-MCU.kicad_sch  BMU-POWER.kicad_sch  Battery Management Unit (BMU).kicad_pcb  Battery Management Unit (BMU).kicad_pro  Battery Management Unit (BMU).kicad_sch  fp-lib-table  sym-lib-table
Hardware/Battery Management Unit (BMU)/bom/: ibom.html
Hardware/Cell Monitoring Unit (CMU)/: Cell Monitoring Unit (CMU).kicad_pcb  Cell Monitoring Unit (CMU).kicad_pro  Cell Monitoring Unit (CMU).kicad_sch  cmu-BQ79616.kicad_sch  cmu-cell-filtering.kicad_sch  cmu-isolation.kicad_sch  fp-lib-table  sym-lib-table
Hardware/Cell Monitoring Unit (CMU)/bom/: ibom.html
Hardware/Monitor/: Montior.kicad_pro  Montior.kicad_sch
Hardware/Shunt_circuit/: Shunt circuit.csv  Shunt circuit.kicad_pcb  Shunt circuit.kicad_pro  Shunt circuit.kicad_sch  fp-lib-table  sym-lib-table
Hardware/Shunt_circuit/ISO1540/: 2026-04-27_23-49-48.kicad_sym
Software/BMS_CAN_Message_Test (Decrepated)/: CMakeLists.txt
Software/BMS_CAN_Message_Test (Decrepated)/src/: main.c
Software/BMS_OS/: CMakeLists.txt  README.rst
Software/CANmodule/: prj.conf
Software/bms_monitor/: CMakeLists.txt  Kconfig  prj.conf
Software/bms_monitor/boards/: nucleo_c092rc.overlay
Software/bms_monitor/src/: main.c
Software/bms_monitor/src/can/: can.c  can.h
Software/bms_monitor/src/debug/: debug.c  debug.h
Software/bms_monitor/src/i2c/: i2c.c  i2c.h
Software/bms_monitor/src/metrics/: metrics.c  metrics.h
Software/bms_monitor/src/monitor/balancing/: balancing.c  balancing.h
Software/bms_monitor/src/monitor/current/: current.c  current.h
Software/bms_monitor/src/monitor/faults/: faults.c  faults.h
Software/bms_monitor/src/monitor/init/: init.c  init.h
Software/bms_monitor/src/monitor/register_maps/: bq79600_regs.h  bq79616_regs.h  bq796xx_regs.h  ina238_regs.h
Software/bms_monitor/src/monitor/temperature/: temperature.c
Software/bms_monitor/src/monitor/voltage/: voltage.c
Software/bms_monitor/src/protocols/: bms_protocol.c  bms_protocol.h  bq796xx_protocol.c  bq796xx_protocol.h  ina238_protocol.c  ina238_protocol.h
Software/bms_monitor/src/telemetry/: telemetry.c  telemetry.h
Software/scripts/: vulcan_listener.py
docs/Final_Project_Report/: Appen_D.tex  Section_2.tex  Section_3.tex  Section_4.tex  Section_7.tex  glossary.tex  main.acn  main.acr  main.alg  main.aux  main.luabridge.lua  main.out  main.tex  main.toc  main.txss2
docs/Poster_Design/: main.txss2
(+139 files in other folders)
